[tool.poetry]
name = "python-microservices-with-grpc"
version = "0.1.0"
description = "example"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
grpcio-tools = "^1.38.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
